added test reg proc & ida scripts

--- a/deployment/sandbox/config-properties/id-authentication-qa.properties
+++ b/deployment/sandbox/config-properties/id-authentication-qa.properties
@@ -1,6 +1,6 @@
 ##################### Dynamic Properties - this may change for different deployemnts ##############################
 # Database hostname
-mosip.ida.database.hostname=172.16.17.4
+mosip.ida.database.hostname=172.16.17.38
 # Database port
 mosip.ida.database.port=9001
 # Database user
@@ -9,9 +9,9 @@ mosip.ida.database.user=idauser
 mosip.ida.database.password=Mosip@dev123
 
 # Kernel auth client ID for IDA
-mosip.ida.auth.clientId=
+mosip.ida.auth.clientId=ida
 # Kernel auth secret key for IDA
-mosip.ida.auth.secretKey=
+mosip.ida.auth.secretKey=54429689-2203-48c1-9fbf-3ea0d2181944
 # Kernel auth application ID for IDA
 mosip.ida.auth.appId=ida
 
@@ -88,10 +88,10 @@ ida.mapping.property.source=url:${mosip.ida.mapping.json-uri}
 
 
 #-------Bio SDK Integration ------------------------
-ida.fingerprint.provider=ai.tech5.auth.service.T5AuthSDK
-ida.face.provider=ai.tech5.auth.service.T5AuthSDK
-ida.iris.provider=ai.tech5.auth.service.T5AuthSDK
-ida.composite.biometric.provider=ai.tech5.auth.service.T5AuthSDK
+ida.fingerprint.provider=io.mosip.kernel.bioapi.impl.BioApiImpl 
+ida.face.provider=io.mosip.kernel.bioapi.impl.BioApiImpl 
+ida.iris.provider=io.mosip.kernel.bioapi.impl.BioApiImpl 
+ida.composite.biometric.provider=io.mosip.kernel.bioapi.impl.BioApiImpl 
 
 #---------------------------------ID-Authentication Salt Generator---------------------------------------------------#
 mosip.authentication.salt-generator.start-sequence=0
