--- a/deployment/sandbox/kubernetes/ida-deployment/authentication-otp-service-deployment-and-service.yml
+++ b/deployment/sandbox/kubernetes/ida-deployment/authentication-otp-service-deployment-and-service.yml
@@ -37,7 +37,7 @@ spec:
            value: http://kernel-config-server:51000/config
       containers:
       - name: authentication-otp-service
-        image: docker-registry.mosip.io:5000/authentication-otp-service:1.0.6-SNAPSHOT.52
+        image: mosipid/authentication-otp-service:1.0.6-SNAPSHOT.52
         env:
         - name: active_profile_env
           value: qa
@@ -52,8 +52,8 @@ spec:
         ports:
         - containerPort: 8092
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: pvt-reg-cred
+      # imagePullSecrets:
+      # - name: pvt-reg-cred
 ---
 apiVersion: v1
 kind: Service
