[MOSIP-257] Pre-reg login added.

--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/application-qa.properties
@@ -201,7 +201,7 @@ mosip.kernel.uin.length.conjugative-even-digits-limit=3
 
 
 #------------------------Auth-Adapter-----------------------------------------------
-auth.server.validate.url=${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 #----------------------- Crypto --------------------------------------------------
 #Crypto asymmetric algorithm name
 mosip.kernel.crypto.asymmetric-algorithm-name=RSA/ECB/OAEPWITHSHA-256ANDMGF1PADDING
@@ -329,7 +329,8 @@ mosip.left_to_right_orientation=eng,fra
 
 
 #**************** Notification Type *************
-mosip.notificationtype=SMS|EMAIL
+#mosip.notificationtype=SMS|EMAIL
+mosip.notificationtype=EMAIL
 #******** Notification lanugage types - either PRIMARY or BOTH ********
 mosip.notification.language-type=BOTH
 
@@ -341,7 +342,7 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=INFO
 mosip.min-digit-longitude-latitude=4
 mosip.kernel.filtervalue.max_columns=20
 
-auth.server.admin.validate.url=${mosip.base.url}/v1/authmanager/authorize/admin/validateToken
+auth.server.admin.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 
 #-------------------Encryption and Decryption---------------------------
 #mosip.kernel.encrypt.url=${mosip.base.url}/v1/keymanager/encrypt
