--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/pre-registration-qa.properties
@@ -4,10 +4,10 @@
 javax.persistence.jdbc.driver=org.postgresql.Driver
 
 # Determines database connection ip
-mosip.database.ip=172.16.17.4
+mosip.database.ip=postgres
 
 # Determines database connection port
-mosip.database.port=9001
+mosip.database.port=80
 
 # Determines database connection URL
 javax.persistence.jdbc.url=jdbc:postgresql://${mosip.database.ip}:${mosip.database.port}/mosip_prereg?useSSL=false
@@ -145,9 +145,10 @@ mosip.preregistration.login.service.version=1.0
 validationStatus=success
 context=auth-otp
 clientId=pre-registration
-secretKey=41fcabc1-dd48-4c40-951a-b80e0af34c47
+secretKey=7716b37a-0183-47b0-80fb-f02aad572bb8
 
-auth.server.validate.url=http://172.16.17.4/v1/authmanager/authorize/admin/validateToken
+#auth.server.validate.url=http://172.16.17.4/v1/authmanager/authorize/admin/validateToken
+auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 
 #--------- Demographic------------
 
