--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -6,7 +6,7 @@ mosip.kernel.database.port=80
 
 
 #---------------------------------------Sync Data service-------------------------------
-mosip.kernel.syncdata.auth-manager-base-uri=http://kernel-auth-service:8091/v1/authmanager
+mosip.kernel.syncdata.auth-manager-base-uri=http://kernel-auth-service/v1/authmanager
 mosip.kernel.syncdata.auth-manager-roles=/roles
 mosip.kernel.syncdata.auth-user-details=/userdetails
 mosip.kernel.syncdata.syncdata-request-id=SYNCDATA.REQUEST
@@ -328,7 +328,7 @@ mosip.admin.login_flow.name=authorization_code
 mosip.admin.login_flow.response_type=code
 mosip.admin.login_flow.scope=cls
 mosip.admin.clientid=mosip-admin-client
-mosip.admin.clientsecret=9d688580-99fd-4f18-abe5-44a7ec3655e1  
+mosip.admin.clientsecret=xyz123
 mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
 
 mosip.admin.individual_role_id=535549c1-3541-4264-b766-cd2cb38c41cd
