adding clamav in base kernel

--- a/deployment/sandbox/playbooks/mosip-sandbox-kernel-launcher.yml
+++ b/deployment/sandbox/playbooks/mosip-sandbox-kernel-launcher.yml
@@ -8,4 +8,5 @@
 - include: install-configure-keycloakserver.yml
 - include: deploying-kernel-modules.yml
 - include: deploying-ingress-file.yml
+- include: install-configure-clamav.yml
 - include: install-configure-hdfs.yml
