[MOSIP-257] Properties updated.

--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/kernel-qa.properties
@@ -46,9 +46,9 @@ mosip.kernel.sms.unicode=1
 #host being used.
 spring.mail.host=smtp.gmail.com
 #user mail id, from which the mail will be sent.
-spring.mail.username=sandboxsmsvm@gmail.com
+spring.mail.username=bonfiley@gmail.com
 #user password, password to authenticate the above mail address.
-spring.mail.password=Madmin@12345
+spring.mail.password=bon!@#$%^&*(
 #port being used.
 spring.mail.port=587
 #protocol being used.
