--- a/deployment/sandbox-v2/roles/config-gitrepo/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-gitrepo/files/properties/pre-registration-qa.properties
@@ -94,7 +94,7 @@ masterdata.service.contextpath=masterdata
 masterdata.resource.url=${masterdata.service.env}/${masterdata.service.version}/${masterdata.service.contextpath}
 
 # Determines email service of kernel
-email.service.env=http://kernel-emailnotification-service:8083
+email.service.env=http://kernel-emailnotification-service
 
 # Determines email service context path of kernel
 email.service.contextpath=emailnotifier
@@ -118,7 +118,7 @@ crypto.service.env=http://kernel-cryptomanager-service:8087
 crypto.service.contextpath=cryptomanager
 
 # Determines Authentication service of kernel
-kernel.auth.env=http://kernel-auth-service:8091
+kernel.auth.env=http://kernel-auth-service
 
 # Determines Authentication service context path of kernel
 kernel.auth.contextpath=authmanager
@@ -147,7 +147,6 @@ context=auth-otp
 clientId=pre-registration
 secretKey=7716b37a-0183-47b0-80fb-f02aad572bb8
 
-#auth.server.validate.url=http://172.16.17.4/v1/authmanager/authorize/admin/validateToken
 auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 
 #--------- Demographic------------
@@ -292,7 +291,7 @@ mosip.batch.token.authmanager.appId=pre-registration
 mosip.batch.token.authmanager.userName=pre-registration
 
 # Determines password for batch job authenticaion
-mosip.batch.token.authmanager.password=41fcabc1-dd48-4c40-951a-b80e0af34c47
+mosip.batch.token.authmanager.password=7716b37a-0183-47b0-80fb-f02aad572bb8
 
 # Determines URL for batch job authenticaion
 mosip.batch.token.authmanager.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}/authenticate/clientidsecretkey
