[MOSIP-257] Pre Reg UI added. WIP. Other cleanup.

--- a/deployment/sandbox-v2/check.yml
+++ b/deployment/sandbox-v2/check.yml
@@ -1,11 +1,7 @@
-- hosts: console
+---
+- hosts: console 
   gather_facts: no
-  vars:
-    myvar: '[{"name": "REGISTRATION_OFFICER"}]'
-    json_var: '{{myvar | from_json}}'
-
   tasks:
     - debug:
-        msg: '{{json_var | type_debug}}'
-    - debug:
-        msg: '{{myvar | type_debug}}'
+        msg: "{{hostvars[groups.kubeworkers[0]].ansible_host}}"
+
