--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: console
-  # Note: we have put tags here to run roles individually if needed.
   gather_facts: false
+  # Note: we have put tags here to run roles individually if needed.
   roles:
      - {role: postgres-init, tags: postgres-init} 
      - local-registry
@@ -13,4 +13,5 @@
      - {role: kernel/kernel-emailnotification, tags: kernel-emailnotification}
      - {role: pre-reg/pre-reg-login, tags: pre-reg-login}
      - {role: pre-reg/pre-reg-notification, tags: pre-reg-notification}
+     - {role: pre-reg/pre-reg-ui, tags: pre-reg-ui}
 
