--- a/deployment/sandbox/playbooks/deploying-pre-registration-modules.yml
+++ b/deployment/sandbox/playbooks/deploying-pre-registration-modules.yml
@@ -5,15 +5,11 @@
       - set_fact:
           VMIP: "{{ hostvars[groups['SandboxVM'][0]]['VMIP'] }}"
 
-      - name: getting private IP of machine
-        shell: hostname -I | awk '{print $1}'
-        register: private_ip
-
       - name: Changing Pre Reg base url in properties
         replace:
           path: ../kubernetes/pre-registration/pre-registration-ui-configuration.yml
-          regexp: '<yourPrivateIp>'
-          replace: "{{ private_ip.stdout }}"
+          regexp: '<yourPublicIp>'
+          replace: "{{ VMIP }}"
 
       - name: Finding all the Pre registration ymls
         find:
