[MOSIP-257] Persistent Volume method changed to 'local'.

--- a/deployment/sandbox-v2/roles/postgres/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/postgres/tasks/main.yml
@@ -6,7 +6,7 @@
     path: '{{tmp_dir}}'
     state: directory
 
-# Create persistent storage
+## Create persistent storage
 - name: Get persistent storage yml from template 
   template:
      src: k8s_pg_storage.yml.j2
