--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -3,10 +3,11 @@
   gather_facts: false
   # Note: we have put tags here to run roles individually if needed.
   roles:
+#     - local-registry
+#     - config-gitrepo
+#     - config-server
+     - {role: postgres, tags: postgres}
      - {role: postgres-init, tags: postgres-init} 
-     - local-registry
-     - config-gitrepo
-     - config-server
      - keycloak
      - keycloak-init
      - {role: kernel/kernel-auth, tags: kernel-auth} 
