[MOSIP-257] Massive changes in config server.  config-gitrepo and local-registry removed.

--- a/deployment/sandbox-v2/roles/config-server/files/Dockerfile
+++ b/deployment/sandbox-v2/roles/config-server/files/Dockerfile
@@ -1,9 +1,13 @@
 FROM openjdk:8
 ARG git_uri
+ARG config_folder
 ARG version
 ARG jar_name
-WORKDIR /home/config
-copy ${jar_name}-${version}.jar /home/config/${jar_name}.jar
-EXPOSE 51000
 ENV env_git_uri=${git_uri}
-CMD java -jar -Dspring.cloud.config.server.git.uri=${env_git_uri} ${jar_name}.jar
+ENV env_config_folder=${config_folder}
+ENV env_version=$(version)
+ENV env_jar_name=${jar_name}
+WORKDIR /home/config
+COPY ${jar_name}-${version}.jar /home/config/${jar_name}.jar
+EXPOSE 51000
+CMD java -jar -Dspring.cloud.config.server.git.uri=${env_git_uri} -Dspring.cloud.config.server.git.search-paths=${env_config_folder} ${env_jar_name}.jar
