--- a/deployment/sandbox-v2/roles/config-server/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/config-server/defaults/main.yml
@@ -1,6 +1,8 @@
 config_server_name: kernel-config-server  # Will be used as service name too
 config_server_version: 1.0.5
-config_server_image: kernel-config-server 
+config_server_image: mosipid/sandbox-config-server
 config_server_jar_name: kernel-config-server # Without .jar. Used locally for Docker
 config_server_jar_uri: "{{artifactory_uri}}/artifactory/libs-release-local/io/mosip/kernel/kernel-config-server/{{config_server_version}}/{{config_server_jar_name}}-{{config_server_version}}.jar"
 config_server_url: 'http://{{config_server_name}}/config'
+config_git_repo_path: /mnt/mosip_data/config_git_repo # This is assumed to have an initialized git repo with property files 
+config_git_repo_search_folders: ''
