--- a/deployment/sandbox-v2/roles/keycloak-init/tasks/create_client.yml
+++ b/deployment/sandbox-v2/roles/keycloak-init/tasks/create_client.yml
@@ -1,5 +1,5 @@
 ---
-- name: 'Create or update client {{client_id}} on Keycloak'
+- name: 'Create or update client {{kc_client_id}} on Keycloak'
   local_action:
     module: keycloak_client
     auth_client_id: admin-cli
@@ -15,27 +15,6 @@
     service_accounts_enabled: yes
     authorization_services_enabled: yes
     state: present
-
-# Update property file if client is of type admin 
-- name: Update mosip.admin.clientid property in property file 
-  include_role:
-    name:  config-gitrepo
-    tasks_from: update_property
-  vars:
-    property_file: 'kernel-qa.properties'
-    property: 'mosip.admin.clientid'
-    value: '{{kc_client_id}}'  
-  when: kc_client_is_admin == true 
-
-- name: Update property file if admin client
-  include_role:
-    name:  config-gitrepo
-    tasks_from: update_property
-  vars:
-    property_file: 'kernel-qa.properties'
-    property: 'mosip.admin.clientsecret'
-    value: '{{kc_client_secret}}'  
-  when: kc_client_is_admin == true 
 
 
 
