--- a/deployment/sandbox-v2/roles/kernel/kernel-auditmanager/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/kernel/kernel-auditmanager/tasks/main.yml
@@ -16,5 +16,5 @@
     state: present
     src: '{{tmp_dir}}/k8s_audit.yml'
     wait: 'yes'
-    wait_timeout: 120 
+    wait_timeout: '{{docker_wait_time}}'
 
