Few modules added. Property files updated.

--- a/deployment/sandbox-v2/roles/config-server/files/properties/application-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/application-qa.properties
@@ -1,5 +1,5 @@
 #---------------------------------------Common properties-----------------------
-mosip.base.url=http://172.16.17.4
+mosip.base.url=http://ourownnet
 
 
 #Kernel-idobjectalidator
