--- a/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
@@ -101,7 +101,7 @@ otp.manager.api.generate=http://kernel-otpmanager-service:8085/v1/otpmanager/otp
 otp.manager.api.verify=http://kernel-otpmanager-service:8085/v1/otpmanager/otp/validate
 otp.sender.api.email.send=http://kernel-emailnotification-service:8083/v1/emailnotifier/email/send
 otp.sender.api.sms.send=http://kernel-smsnotification-service:8084/v1/smsnotifier/sms/send
-masterdata.api.template=http://kernel-masterdata-service:8086/v1/masterdata/templates/
+masterdata.api.template=http://kernel-masterdata-service/v1/masterdata/templates/
 masterdata.api.template.otp=/otp-sms-template
 idrepo.api.getuindetails=http://id-repository-identity-service:8090/idrepository/v1/identity/uin/{uin}
 
@@ -120,8 +120,8 @@ mosip.kernel.registrationclient.client.id=registration_client_app
 mosip.kernel.registrationclient.secret.key=registration_client_app
 
 mosip.kernel.auth.app.id=auth
-mosip.kernel.auth.client.id=auth
-mosip.kernel.auth.secret.key=5142e55e-e3f0-428e-ba45-7be21a7cf732
+mosip.kernel.auth.client.id=mosip-auth-client
+mosip.kernel.auth.secret.key=abc123
 
 mosip.kernel.ida.app.id=ida
 mosip.kernel.ida.client.id=ida
@@ -357,7 +357,7 @@ keycloak.verify-token-audience=true
 #---latest changes--#
 master.search.maximum.rows=50
 mosip.level=2
-mosip.kernel.masterdata.audit-url=${mosip.keycloak.base-url}/v1/auditmanager/audits
+mosip.kernel.masterdata.audit-url=http://kernel-auditmanager-service/v1/auditmanager/audits
 mosip.keycloak.max-no-of-users=20000
 
 #---Register device changes--#
