--- a/deployment/sandbox-v2/roles/config-server/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/pre-registration-qa.properties
@@ -43,7 +43,7 @@ preregistration.preid.regex=[0-9]+
 demographic.service.version=v1
 
 #Demographic service context path
-demographic.service.env=http://pre-registration-demographic-service:9092
+demographic.service.env=http://pre-registration-demographic-service
 demographic.service.contextpath=preregistration/${demographic.service.version}
 
 #Demographic service URL
@@ -144,8 +144,10 @@ mosip.preregistration.config.id=mosip.pre-registration.login.config
 mosip.preregistration.login.service.version=1.0
 validationStatus=success
 context=auth-otp
-clientId=pre-registration
-secretKey=7716b37a-0183-47b0-80fb-f02aad572bb8
+# Both below fields must match with what is there on Keycloak
+# TODO: The below client id looks hard coded in code
+clientId=mosip-pre-registration-client
+secretKey=abc123
 
 auth.server.validate.url=http://kernel-auth-service/v1/authmanager/authorize/admin/validateToken
 
@@ -288,10 +290,10 @@ mosip.preregistration.booking.exception.id=mosip.preregistration.booking.parse.e
 mosip.batch.token.authmanager.appId=pre-registration
 
 # Determines user name for batch job authenticaion
-mosip.batch.token.authmanager.userName=pre-registration
+mosip.batch.token.authmanager.userName=mosip-pre-registration-client
 
 # Determines password for batch job authenticaion
-mosip.batch.token.authmanager.password=7716b37a-0183-47b0-80fb-f02aad572bb8
+mosip.batch.token.authmanager.password=abc123
 
 # Determines URL for batch job authenticaion
 mosip.batch.token.authmanager.url=${kernel.auth.env}/${masterdata.service.version}/${kernel.auth.contextpath}/authenticate/clientidsecretkey
