--- a/deployment/sandbox-v2/roles/pre-reg/pre-reg-notification/defaults/main.yml
+++ b/deployment/sandbox-v2/roles/pre-reg/pre-reg-notification/defaults/main.yml
@@ -1,3 +1,4 @@
 pre_reg_notification_name: pre-registration-notification-service 
 pre_reg_notification_version: 1.0.6-SNAPSHOT.73 
 pre_reg_notification_image: mosipid/pre-registration-notification-service
+pre_reg_notification_container_port: 9099
