--- a/deployment/sandbox-v2/roles/kernel/kernel-masterdata/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/kernel/kernel-masterdata/tasks/main.yml
@@ -8,13 +8,13 @@
 # Deploy container 
 - name: Get yml from template 
   template:
-     src: k8s_pre_reg_notification.yml.j2
-     dest: '{{tmp_dir}}/k8s_pre_reg_notification.yml'
+     src: k8s_masterdata.yml.j2
+     dest: '{{tmp_dir}}/k8s_masterdata.yml'
 
 - name: Deploy on kurbernetes
   k8s:
     state: present
-    src: '{{tmp_dir}}/k8s_pre_reg_notification.yml'
+    src: '{{tmp_dir}}/k8s_masterdata.yml'
     wait: 'yes'
-    wait_timeout: '{{docker_wait_time}}' 
+    wait_timeout: '{{docker_wait_time}}'
 
