--- a/deployment/sandbox-v2/roles/pre-reg/pre-reg-demographic/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/pre-reg/pre-reg-demographic/tasks/main.yml
@@ -8,13 +8,13 @@
 # Deploy container 
 - name: Get yml from template 
   template:
-     src: k8s_pre_reg_notification.yml.j2
-     dest: '{{tmp_dir}}/k8s_pre_reg_notification.yml'
+     src: k8s_pre_reg_demographic.yml.j2
+     dest: '{{tmp_dir}}/k8s_pre_reg_demographic.yml'
 
 - name: Deploy on kurbernetes
   k8s:
     state: present
-    src: '{{tmp_dir}}/k8s_pre_reg_notification.yml'
+    src: '{{tmp_dir}}/k8s_pre_reg_demographic.yml'
     wait: 'yes'
     wait_timeout: '{{docker_wait_time}}' 
 
