--- a/deployment/sandbox-v2/roles/pre-reg/pre-reg-login/tasks/main.yml
+++ b/deployment/sandbox-v2/roles/pre-reg/pre-reg-login/tasks/main.yml
@@ -16,5 +16,5 @@
     state: present
     src: '{{tmp_dir}}/k8s_pre_reg_login.yml'
     wait: 'yes'
-    wait_timeout: 120 
+    wait_timeout: '{{docker_wait_time}}' 
 
