--- a/deployment/sandbox-v2/roles/config-server/files/properties/pre-registration-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/pre-registration-qa.properties
@@ -53,7 +53,7 @@ demographic.resource.url=${demographic.service.env}/${demographic.service.contex
 document.service.version=v1
 
 #Document service context path
-document.service.env=http://pre-registration-document-service:9093
+document.service.env=http://pre-registration-document-service
 document.service.contextpath=preregistration/${document.service.version}
 
 #Document service URL 
@@ -63,7 +63,7 @@ document.resource.url=${document.service.env}/${document.service.contextpath}
 booking.service.version=v1
 
 #Booking service context path
-booking.service.env=http://pre-registration-booking-service:9095
+booking.service.env=http://pre-registration-booking-service
 booking.service.contextpath=preregistration/${booking.service.version}
 
 #Booking service URL
@@ -73,7 +73,7 @@ booking.resource.url=${booking.service.env}/${booking.service.contextpath}
 batch.service.version=v1
 
 #BatchJob-service context path
-batch.service.env=http://pre-registration-batchjob-service:9096
+batch.service.env=http://pre-registration-batchjob-service
 batch.service.contextpath=preregistration/${batch.service.version}/batch
 
 #batchjob service URL
@@ -81,13 +81,13 @@ batch.resource.url=${batch.service.env}/${batch.service.contextpath}
 
 #Notification service context path
 notification.service.version=v1
-notification.service.env=http://pre-registration-notification-service:9099
+notification.service.env=http://pre-registration-notification-service
 notification.service.contextpath=preregistration/${notification.service.version}
 
 # Determines master service version
 masterdata.service.version=v1
 # Determines master service context path
-masterdata.service.env=http://kernel-masterdata-service:8086
+masterdata.service.env=http://kernel-masterdata-service
 masterdata.service.contextpath=masterdata
 
 # masterdata service URL
@@ -100,19 +100,19 @@ email.service.env=http://kernel-emailnotification-service
 email.service.contextpath=emailnotifier
 
 # Determines SMS service of kernel
-sms.service.env=http://kernel-smsnotification-service:8084
+sms.service.env=http://kernel-smsnotification-service
 
 # Determines SMS service context path of kernel
 sms.service.contextpath=smsnotifier
 
 # Determines Audit service of kernel
-audit.service.env=http://kernel-auditmanager-service:8081
+audit.service.env=http://kernel-auditmanager-service
 
 # Determines Audit service context path of kernel
 audit.service.contextpath=auditmanager
 
 # Determines Crypto service of kernel
-crypto.service.env=http://kernel-cryptomanager-service:8087
+crypto.service.env=http://kernel-cryptomanager-service
 
 # Determines Crypto service context path of kernel
 crypto.service.contextpath=cryptomanager
@@ -123,7 +123,7 @@ kernel.auth.env=http://kernel-auth-service
 # Determines Authentication service context path of kernel
 kernel.auth.contextpath=authmanager
 
-kernel.prid.env=http://kernel-pridgenerator-service:8100
+kernel.prid.env=http://kernel-pridgenerator-service
 kernel.prid.contextpath=pridgenerator
 
 #----------Auth-------------------
