--- a/deployment/sandbox-v2/site.yml
+++ b/deployment/sandbox-v2/site.yml
@@ -9,6 +9,7 @@
      - {role: config-server, tags: config-server} 
      - {role: keycloak, tags: keycloak} # Depends on postgres 
      - {role: keycloak-init, tags: keycloak-init} # Depends on keycloak
+     - {role: ingress, tags: ingress} 
 
      # Kernel  
      - {role: kernel/kernel-auth, tags: kernel-auth}  
