--- a/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
+++ b/deployment/sandbox-v2/roles/config-server/files/properties/kernel-qa.properties
@@ -327,12 +327,11 @@ mosip.keycloak.token_endpoint=${mosip.keycloak.base-url}/auth/realms/mosip/proto
 mosip.admin.login_flow.name=authorization_code
 mosip.admin.login_flow.response_type=code
 mosip.admin.login_flow.scope=cls
+# Below client used for Admin UI / Kernel Auth
 mosip.admin.clientid=mosip-admin-client
 mosip.admin.clientsecret=xyz123
 mosip.admin.redirecturi=${mosip.authmanager.base-url}/login-redirect/
 
-mosip.admin.individual_role_id=535549c1-3541-4264-b766-cd2cb38c41cd
-mosip.admin.pre-reg_user_password=mosip
 
 db_3_DS.keycloak.ipaddress=jdbc:postgresql://postgres:80/keycloak
 db_3_DS.keycloak.port=80
@@ -340,9 +339,20 @@ db_3_DS.keycloak.username=postgres
 db_3_DS.keycloak.password=postgres
 db_3_DS.keycloak.driverClassName=org.postgresql.Driver
 
+# Below is the client that is created by default in Keycloak 
 mosip.keycloak.admin.client.id=admin-cli
 mosip.keycloak.admin.user.id=admin
 mosip.keycloak.admin.secret.key=admin
+
+
+mosip.kernel.open-idurl=https://${mosip.keycloak.base-url}/auth/realms/{realmId}/protocol/openid-connect/
+mosip.kernel.baseurl=https://${mosip.keycloak.base-url}/auth/admin/realms/{realmId}
+mosip.keycloak.authorization_endpoint=${mosip.keycloak.base-url}/auth/realms/{realmId}/protocol/openid-connect/auth
+mosip.kernel.prereg.realm-id=preregistration
+mosip.kernel.prereg.client.id=mosip-pre-registration-client
+mosip.kernel.prereg.secret.key=abc123
+mosip.admin.individual_role_id=2e32882a-7b66-41e6-810b-9cf084cc4054
+mosip.admin.pre-reg_user_password=mosip
 
 # Unused - start
 keycloak.realm=mosip
