[MOSIP-540] kubernetes scripts minor changes

--- a/deployment/sandbox-v2/kube/group_vars/all.yml
+++ b/deployment/sandbox-v2/kube/group_vars/all.yml
@@ -37,9 +37,9 @@ kube_addon_dir: /etc/kubernetes/addon
 
 # Additional feature to install
 additional_features:
-  helm: false
-  metallb: false
-  healthcheck: false
+  helm: true
+  metallb: true
+  healthcheck: true
 
 # temporary directory used by additional features
 tmp_dir: /tmp/kubeadm-ansible-files
