--- a/deployment/sandbox-v2/kube/site.yaml
+++ b/deployment/sandbox-v2/kube/site.yaml
@@ -25,21 +25,21 @@
     - name: "Helm role"
       include_role:
         name: helm
-      #when: "additional_features.helm"
-      #run_once: yes
-      #tags: helm
+      when: "additional_features.helm"
+      run_once: yes
+      tags: helm
 
     - name: "MetalLB role"
       include_role:
         name: metallb
-      #when: "additional_features.metallb"
-      #run_once: yes
-      #tags: metallb
+      when: "additional_features.metallb"
+      run_once: yes
+      tags: metallb
 
     - name: "Healthcheck role"
       include_role:
         name: healthcheck
-      #when: "additional_features.healthcheck"
-      #run_once: yes
-      #tags: healthcheck
+      when: "additional_features.healthcheck"
+      run_once: yes
+      tags: healthcheck
 
